# allm

server/: .env  Cargo.toml
server/migrations/: 20240313163907_init.sql
server/src/: main.rs
