[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4"
actix-web-actors = "4.3.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_postgres = "0.2.0"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
]
